# sccc_contestbot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-dev  Pipfile  README.md  app.py  codeforcesGetter.py  contestBot.py  contestCollection.py  contestData.py  docker-compose.yml  getter.py  pyproject.toml  run.py  scheduleChecker.py  settings.py  subscriberManager.py  timeStrategy.py
collectors/: baekjoonCollector.py  codeforcesCollector.py  collector.py
docker-dev/: Dockerfile  docker-compose.yml
getters/: baekjoonCollector.py  codeforcesCollector.py  codeforcesGetter.py  collector.py  getter.py
sccc_contestbot/: __init__.py  contest_manager.py  logger.py  sub_manager.py  time_strategy.py
sccc_contestbot/collectors/: __init__.py  boj_collector.py  cf_collector.py
sccc_contestbot/models/: __init__.py  contest.py  subscriber.py
tests/: conftest.py  test_basic_bot.py  test_call_back.py  test_contest_manager.py  test_sub_manger.py
